desktop ui done

--- a/index.html
+++ b/index.html
@@ -43,53 +43,68 @@
 
   <section class="section-landing">
     <div class="container">
-      <h1 class="title-landing">More than just shorter links</h1>
-      <p>Build your brand’s recognition and get detailed insights
-        on how your links are performing.</p>
-      <button class="cta-btn">Get Started</button>
-      <div class="search-bar-urls">
-        <input type="text" class="input-field" id="link-input">
-        <button class="btn-squared">Shorten It!</button>
+      <div class="row">
+        <div class="col">
+          <h1 class="title-hero">More than just shorter links</h1>
+          <p>Build your brand’s recognition and get detailed insights
+            on how your links are performing.</p>
+          <button class="cta-btn">Get Started</button>
+        </div>
+        <div class="col">
+          <img src="/images/illustration-working.svg" class="illustration-landing" alt="illustration-working">
+        </div>
       </div>
     </div>
   </section>
 
   <section class="stats-section">
     <div class="container">
-      <h2 class="section-title">Advanced Statistics</h2>
-      <p>Track how your links are performing across the web with our
-        advanced statistics dashboard.</p>
+      <div class="search-bar-urls">
+        <input type="text" class="input-field" placeholder="Shorten a link here.." id="link-input"
+          style="width: 80%; margin-right: 2%;">
+        <button class="btn-squared">Shorten It!</button>
+      </div>
+      <div class="center">
+        <h2 class="section-title">Advanced Statistics</h2>
+        <p>Track how your links are performing across the web with <br> our
+          advanced statistics dashboard.</p>
+      </div>
 
+      <div class="line-through-cards"></div>
       <div class="row">
-        <div class="col card">
-          <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
-          <h4 class="card-title">Brand Recognition</h4>
-          <p>Boost your brand recognition with each click. Generic links don’t
-            mean a thing. Branded links help instil confidence in your content.</p>
+        <div class="col-4 card">
+          <div class="card-content">
+            <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
+            <h4 class="card-title">Brand Recognition</h4>
+            <p>Boost your brand recognition with each click. Generic links don’t
+              mean a thing. Branded links help instil confidence in your content.</p>
+          </div>
         </div>
 
-        <div class="col card">
-          <img src="images/icon-detailed-records.svg" alt="detailed Records" class="card-icon">
-          <h4 class="card-title">Detailed Records</h4>
-          <p>Gain insights into who is clicking your links. Knowing when and where
-            people engage with your content helps inform better decisions.</p>
+        <div class="col-4 card">
+          <div class="card-content" id="card-2">
+            <img src="images/icon-detailed-records.svg" alt="detailed Records" class="card-icon">
+            <h4 class="card-title">Detailed Records</h4>
+            <p>Gain insights into who is clicking your links. Knowing when and where
+              people engage with your content helps inform better decisions.</p>
+          </div>
         </div>
 
-        <div class="col card">
-          <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
-          <h4 class="card-title">Fully Customizable</h4>
-          <p>Improve brand awareness and content discoverability through customizable
-            links, supercharging audience engagement.</p>
+        <div class="col-4 card">
+          <div class="card-content" id="card-3">
+            <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
+            <h4 class="card-title">Fully Customizable</h4>
+            <p>Improve brand awareness and content discoverability through customizable
+              links, supercharging audience engagement.</p>
+          </div>
         </div>
-
-        <div class="line-through-cards"></div>
       </div>
     </div>
   </section>
 
   <section class="cta-section">
     <div class="container">
-      <div class="title-cta-section">Boost your links today</div>
+      <div class="section-title-cta">Boost your links today</div>
       <button class="cta-btn">Get Started</button>
     </div>
   </section>
@@ -97,35 +112,42 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col">
-          <img src="/images/logo.svg" alt="logo Shortly">
+        <div class="col-3">
+          <img src="/images/logo-footer.svg" alt="logo Shortly">
         </div>
         <div class="col">
-          <h6 class="footer-title-menu">Features</h6>
-          <ul class="footer-ul">
-            <li>Link Shortening</li>
-            <li>Branded Links</li>
-            <li>Analytics</li>
-          </ul>
+          <div class="row">
+            <div class="col-4">
+              <h6 class="footer-title-menu">Features</h6>
+              <ul class="footer-ul">
+                <li>Link Shortening</li>
+                <li>Branded Links</li>
+                <li>Analytics</li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <h6 class="footer-title-menu">Resources</h6>
+              <ul class="footer-ul">
+                <li>Blog</li>
+                <li>Developers</li>
+                <li>Support</li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <h6 class="footer-title-menu">Company</h6>
+              <ul class="footer-ul">
+                <li>About</li>
+                <li>Our Team</li>
+                <li>Careers</li>
+                <li>Contact</li>
+              </ul>
+            </div>
+
+          </div>
         </div>
-        <div class="col">
-          <h6 class="footer-title-menu">Resources</h6>
-          <ul class="footer-ul">
-            <li>Blog</li>
-            <li>Developers</li>
-            <li>Support</li>
-          </ul>
-        </div>
-        <div class="col">
-          <h6 class="footer-title-menu">Company</h6>
-          <ul class="footer-ul">
-            <li>About</li>
-            <li>Our Team</li>
-            <li>Careers</li>
-            <li>Contact</li>
-          </ul>
-        </div>
-        <div class="col">
+        <div class="col-3">
           <ul class="horizontal-list">
             <li><img src="/images/icon-facebook.svg" alt="icon-facebook"></li>
             <li><img src="/images/icon-twitter.svg" alt="icon-twitter"></li>
