a little validation added to input field

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
       <div class="search-bar-urls">
         <input type="text" class="input-field" placeholder="Shorten a link here.." id="link-input"
           style="width: 80%; margin-right: 2%;">
-        <button class="btn-squared">Shorten It!</button>
+        <button class="btn-squared" id="btn-shorten">Shorten It!</button><br>
+        <p class="error-msg" id="error-msg-link">Please add a link</p>
       </div>
       <div class="center">
         <h2 class="section-title">Advanced Statistics</h2>
@@ -158,6 +159,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
