mobile responsive fixed somewhat

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="line-through-cards"></div>
       <div class="row">
         <div class="col-4 card">
-          <div class="card-content">
+          <div class="card-content" id="card-1">
             <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
             <h4 class="card-title">Brand Recognition</h4>
             <p>Boost your brand recognition with each click. Generic links don’t
@@ -124,7 +124,7 @@
     <div class="container">
       <div class="row">
         <div class="col-3">
-          <img src="/images/logo-footer.svg" alt="logo Shortly">
+          <img src="/images/logo-footer.svg" class="footer-logo" alt="logo Shortly">
         </div>
         <div class="col">
           <div class="row">
