fixed input validation and mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         </div>
 
         <div class="right" id="mobile-right">
-          <a href="#mobile-menu-li">
-            <img src="/images/icon-hamburger.svg" id="mobile-btn">
-          </a>
+          <img src="/images/icon-hamburger.svg" id="mobile-btn">
         </div>
       </ul>
     </div>
@@ -70,7 +68,7 @@
           <input type="text" class="input-field" placeholder="Shorten a link here.." id="link-input"
             style="width: 80%; margin-right: 2%;">
           <button class="btn-squared" id="btn-shorten">Shorten It!</button><br>
-          <p class="error-msg" id="error-msg-link">Please add a link</p>
+          <p class="error-msg" id="error-msg-link"></p>
         </div>
 
         <!-- Insert urls dynamically -->
