--- a/index.html
+++ b/index.html
@@ -14,164 +14,165 @@
 </head>
 
 <body>
-
-  <header>
-    <div class="container">
-      <ul class="horizontal-list">
-        <li class="logo-header"><img src="/images/logo.svg" alt="logo Shortly"></li>
-        <li>Features</li>
-        <li>Pricing</li>
-        <li>Resources</li>
-        <div class="right">
-          <li>Login</li>
-          <li><button class="cta-btn">Sign Up</button></li>
-        </div>
-
-        <div class="right" id="mobile-right">
-          <img src="/images/icon-hamburger.svg" id="mobile-btn">
-        </div>
-      </ul>
-    </div>
-  </header>
-
-  <ul class="mobile-menu expandable" id="mobile-menu-li">
-    <li>Features</li>
-    <li>Pricing</li>
-    <li>Resources</li>
-    <div class="bottom">
-      <li>Login</li>
-      <li><button class="cta-btn">Sign Up</button></li>
-    </div>
-  </ul>
-
-  <section class="section-landing">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1 class="title-hero">More than just shorter links</h1>
-          <p>Build your brand’s recognition and get detailed insights
-            on how your links are performing.</p>
-          <button class="cta-btn">Get Started</button>
-        </div>
-        <div class="col">
-          <img src="/images/illustration-working.svg" class="illustration-landing" alt="illustration-working">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="stats-section">
-    <div class="container">
-
-      <div class="container-shorten">
-        <div class="search-bar-urls">
-          <input type="text" class="input-field" placeholder="Shorten a link here.." id="link-input"
-            style="width: 80%; margin-right: 2%;">
-          <button class="btn-squared" id="btn-shorten">Shorten It!</button><br>
-          <p class="error-msg" id="error-msg-link"></p>
-        </div>
-
-        <!-- Insert urls dynamically -->
-        <div class="container-urls">
-          <div id="urls-container"></div>
-          <span id="clear-urls" class="clear-btn">Clear items</span>
-        </div>
-      </div>
-
-      <div class="center">
-        <h2 class="section-title">Advanced Statistics</h2>
-        <p>Track how your links are performing across the web with <br> our
-          advanced statistics dashboard.</p>
-      </div>
-
-      <div class="line-through-cards"></div>
-      <div class="row">
-        <div class="col-4 card">
-          <div class="card-content" id="card-1">
-            <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
-            <h4 class="card-title">Brand Recognition</h4>
-            <p>Boost your brand recognition with each click. Generic links don’t
-              mean a thing. Branded links help instil confidence in your content.</p>
+  <div class="wrapper">
+    <header>
+      <div class="container">
+        <ul class="horizontal-list">
+          <li class="logo-header"><img src="/images/logo.svg" alt="logo Shortly"></li>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Resources</li>
+          <div class="right">
+            <li>Login</li>
+            <li><button class="cta-btn">Sign Up</button></li>
           </div>
-        </div>
 
-        <div class="col-4 card">
-          <div class="card-content" id="card-2">
-            <img src="images/icon-detailed-records.svg" alt="detailed Records" class="card-icon">
-            <h4 class="card-title">Detailed Records</h4>
-            <p>Gain insights into who is clicking your links. Knowing when and where
-              people engage with your content helps inform better decisions.</p>
+          <div class="right" id="mobile-right">
+            <img src="/images/icon-hamburger.svg" id="mobile-btn">
           </div>
-        </div>
+        </ul>
+      </div>
+    </header>
 
-        <div class="col-4 card">
-          <div class="card-content" id="card-3">
-            <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
-            <h4 class="card-title">Fully Customizable</h4>
-            <p>Improve brand awareness and content discoverability through customizable
-              links, supercharging audience engagement.</p>
+    <ul class="mobile-menu expandable" id="mobile-menu-li">
+      <li>Features</li>
+      <li>Pricing</li>
+      <li>Resources</li>
+      <div class="bottom">
+        <li>Login</li>
+        <li><button class="cta-btn">Sign Up</button></li>
+      </div>
+    </ul>
+
+    <section class="section-landing">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 class="title-hero">More than just shorter links</h1>
+            <p>Build your brand’s recognition and get detailed insights
+              on how your links are performing.</p>
+            <button class="cta-btn">Get Started</button>
+          </div>
+          <div class="col">
+            <img src="/images/illustration-working.svg" class="illustration-landing" alt="illustration-working">
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="cta-section">
-    <div class="container">
-      <div class="section-title-cta">Boost your links today</div>
-      <button class="cta-btn">Get Started</button>
-    </div>
-  </section>
+    <section class="stats-section">
+      <div class="container">
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-3">
-          <img src="/images/logo-footer.svg" class="footer-logo" alt="logo Shortly">
+        <div class="container-shorten">
+          <div class="search-bar-urls">
+            <input type="text" class="input-field" placeholder="Shorten a link here.." id="link-input"
+              style="width: 80%; margin-right: 2%;">
+            <button class="btn-squared" id="btn-shorten">Shorten It!</button><br>
+            <p class="error-msg" id="error-msg-link"></p>
+          </div>
+
+          <!-- Insert urls dynamically -->
+          <div class="container-urls">
+            <div id="urls-container"></div>
+            <span id="clear-urls" class="clear-btn">Clear items</span>
+          </div>
         </div>
-        <div class="col">
-          <div class="row">
-            <div class="col-4">
-              <h6 class="footer-title-menu">Features</h6>
-              <ul class="footer-ul">
-                <li>Link Shortening</li>
-                <li>Branded Links</li>
-                <li>Analytics</li>
-              </ul>
+
+        <div class="center">
+          <h2 class="section-title">Advanced Statistics</h2>
+          <p>Track how your links are performing across the web with <br> our
+            advanced statistics dashboard.</p>
+        </div>
+
+        <div class="line-through-cards"></div>
+        <div class="row">
+          <div class="col-4 card">
+            <div class="card-content" id="card-1">
+              <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
+              <h4 class="card-title">Brand Recognition</h4>
+              <p>Boost your brand recognition with each click. Generic links don’t
+                mean a thing. Branded links help instil confidence in your content.</p>
             </div>
+          </div>
 
-            <div class="col-4">
-              <h6 class="footer-title-menu">Resources</h6>
-              <ul class="footer-ul">
-                <li>Blog</li>
-                <li>Developers</li>
-                <li>Support</li>
-              </ul>
+          <div class="col-4 card">
+            <div class="card-content" id="card-2">
+              <img src="images/icon-detailed-records.svg" alt="detailed Records" class="card-icon">
+              <h4 class="card-title">Detailed Records</h4>
+              <p>Gain insights into who is clicking your links. Knowing when and where
+                people engage with your content helps inform better decisions.</p>
             </div>
+          </div>
 
-            <div class="col-4">
-              <h6 class="footer-title-menu">Company</h6>
-              <ul class="footer-ul">
-                <li>About</li>
-                <li>Our Team</li>
-                <li>Careers</li>
-                <li>Contact</li>
-              </ul>
+          <div class="col-4 card">
+            <div class="card-content" id="card-3">
+              <img src="images/icon-brand-recognition.svg" alt="brand recognition" class="card-icon">
+              <h4 class="card-title">Fully Customizable</h4>
+              <p>Improve brand awareness and content discoverability through customizable
+                links, supercharging audience engagement.</p>
             </div>
-
           </div>
         </div>
-        <div class="col-3">
-          <ul class="horizontal-list">
-            <li><img src="/images/icon-facebook.svg" alt="icon-facebook"></li>
-            <li><img src="/images/icon-twitter.svg" alt="icon-twitter"></li>
-            <li><img src="/images/icon-pinterest.svg" alt="icon-pinterest"></li>
-            <li><img src="/images/icon-instagram.svg" alt="icon-instagram"></li>
-          </ul>
+      </div>
+    </section>
+
+    <section class="cta-section">
+      <div class="container">
+        <div class="section-title-cta">Boost your links today</div>
+        <button class="cta-btn">Get Started</button>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <img src="/images/logo-footer.svg" class="footer-logo" alt="logo Shortly">
+          </div>
+          <div class="col">
+            <div class="row">
+              <div class="col-4">
+                <h6 class="footer-title-menu">Features</h6>
+                <ul class="footer-ul">
+                  <li>Link Shortening</li>
+                  <li>Branded Links</li>
+                  <li>Analytics</li>
+                </ul>
+              </div>
+
+              <div class="col-4">
+                <h6 class="footer-title-menu">Resources</h6>
+                <ul class="footer-ul">
+                  <li>Blog</li>
+                  <li>Developers</li>
+                  <li>Support</li>
+                </ul>
+              </div>
+
+              <div class="col-4">
+                <h6 class="footer-title-menu">Company</h6>
+                <ul class="footer-ul">
+                  <li>About</li>
+                  <li>Our Team</li>
+                  <li>Careers</li>
+                  <li>Contact</li>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+          <div class="col-3">
+            <ul class="horizontal-list">
+              <li><img src="/images/icon-facebook.svg" alt="icon-facebook"></li>
+              <li><img src="/images/icon-twitter.svg" alt="icon-twitter"></li>
+              <li><img src="/images/icon-pinterest.svg" alt="icon-pinterest"></li>
+              <li><img src="/images/icon-instagram.svg" alt="icon-instagram"></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 
   <script src="/js/index.js"></script>
 </body>
